bk_ida/gccida/g1/expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_va_arg/src/builtins.c:3527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_va_arg/src/builtins.c:3585:7: error: use of undeclared identifier 'gave_help_9'
if ( !gave_help_9 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_va_arg/src/builtins.c:3587:1: error: use of undeclared identifier 'gave_help_9'
gave_help_9 = 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_va_arg/src/builtins.c:3604:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_MEM( ( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), v5); 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_va_arg/src/obj/builtins.o] Error 1
